@@ -1295,6 +1295,7 @@
 	<Manufacturer id="004e" name="Zdata">
 	</Manufacturer>
 	<Manufacturer id="0131" name="Zipato">
+		<Product type="0001" id="0012" name="Micro Module Switch Double PAN04" config="zipato/pan04.xml" />
 		<Product type="0002" id="0002" name="RGBW LED Bulb" config="zipato/RGBBulb.xml" />
 		<Product type="0002" id="0003" name="Bulb 2" config="zipato/RGBBulb2.xml"/>
 		<Product type="0002" id="000c" name="PST02-A 4 in 1 Multi-Sensor" config="philio/pst02.xml"/>
