@@ -1,0 +1,88 @@
+<?xml version="1.0" encoding="utf-8"?>
+<!--
+Zipato: PAN04 Micro Module Switch Double w.meter
+https://products.z-wavealliance.org/products/2421
+-->
+<Product xmlns='http://code.google.com/p/open-zwave/'>
+    <CommandClass id="96" mapping="endpoints" />
+	<!-- Configuration Parameters -->
+	<CommandClass id="112">
+		<Value type="short" instance="1" index="1" genre="config" label="Watt Meter Report Period" units="5 seconds" min="1" max="32000" value="720">
+			<Help>
+                If the setting is configured for 1hour (set value =720), Micromodule will report its instant power consumption every 1 hour to the node of correspond Group.
+                The maximum interval to report its instant power consumption is 45 hours (5s*32767/3600=45hr).</Help>
+		</Value>
+		<Value type="short" instance="1" index="2" genre="config" label="KWh Meter Report Period" units="10 minutes" min="1" max="32000" value="6">
+			<Help>
+                If the setting is configured for 1hour (set value =6), Micromodule will report its Accumulated Power Consumption (KW/h) every 1 hour to the node of correspond Group.
+                The maximum interval to report its Accumulated Power Consumption (KW/h) is 227.55 days (10min*32767/1440=227.55 days).</Help>
+		</Value>
+		<Value type="list" instance="1" index="3" genre="config" label="Selected end point" size="1" min="1" max="3" value="1">
+			 <Help>If Micromodule is not using Multi_Channel command class to access the relay of Switch, you may configure the select value to react the Basic Command Class, Binary Switch Command Class or Meter Command Class V3.</Help>
+            <Item label="Relay 1 and Relay 2" value="1" />
+			<Item label="Relay 1" value="2" />
+			<Item label="Relay 2" value="3" />
+		</Value>
+		<Value type="list" instance="1" index="4" genre="config" label="External switch operating mode" size="1" min="1" max="3" value="1">
+			<Help>Manual switch S1 and S2 can set to Edge mode or Pulse mode or Edge-Toggle mode, default value is Edge mode.
+            1) Edge : This mode is suitable for the bi stable wall switch that has indicator point on the Micromodule, and the same position correspond to same state of relay1 and relay2. if the Switchs relay changes the state because of receiving Z-Wave RF command, it may need two switchings (switch on to off or switch off to on) to let relay back to the corresponding state.
+            2) Pulse : this mode is suitable for the toggle type wall switch to swap the state of Relay1 or Relay2.
+            3) Edge-Toggle : This mode is suitable for the normal bi-stable switch, every state change of the wall switch will also swap the state of Relay1 or Relay2.</Help>
+			<Item label="Edge" value="1" />
+			<Item label="Pulse" value="2" />
+			<Item label="Edge/Toggle" value="3" />
+		</Value>
+		<Value type="short" instance="1" index="5" genre="config" label="Threshold of Watt for Load Caution" units="0.01A" min="10" max="750" value="750">
+			 <Help>This is a warning when the wattage of load over the preset threshold value, If the setting value is 750, when the load wattage of Relay1 or Relay2 over this value, Micromodule will send Watt Meter Report command to the node of correspond Group, the Range of the setting value is from 10 to 750, and the default value is 750.</Help>
+		</Value>
+		<Value type="short" instance="1" index="6" genre="config" label="Threshold of kWh for Load Caution" units="1KWh" min="10" max="1000" value="750">
+			 <Help>This is a warning when the KWh of load exceeds preset threshold value, If the setting value is 1000, when the Accumulated Power Consumption of Relay1 or Relay2 exceeds this value, Micromodule will send KWh Meter Report command to the node of corresponding Group, the Range of the setting value is from 10 to 1000, and the default value is 750.</Help>
+		</Value>
+        <Value type="list" instance="1" index="7" genre="config" label="Restore switch state mode" size="1" min="1" max="3" value="1">
+			 <Help>Whenever the AC power return from lost, Micromodule will restore the switch state which could be</Help>
+            <Item label="Switch off" value="1" />
+			<Item label="Last switch state" value="2" />
+			<Item label="Switch on" value="3" />
+		</Value>
+        <Value type="short" instance="1" index="8" genre="config" label="Auto off timer" units="second" min="0" max="32767" value="0">
+			<Help>
+                Whenever Micromodule switches to on, the auto off timer begin to count down.
+                After the timer decrease to zero, it will switch off automatically.
+                However if Auto off timer is set as 0, the auto off function will be disabled.
+                The default setting is 0.
+            </Help>
+		</Value>
+        <Value type="list" instance="1" index="9" genre="config" label="RF off command mode" size="1" min="0" max="3" value="1">
+			 <Help>
+                 Whenever a switch off command, BASIC_SET, BINARY_SWITCH_SET, SWITCH_ALL_OFF, is received, it could be interpreted as 4 kinds of commands.
+             </Help>
+            <Item label="Switch off" value="0" />
+            <Item label="Ignore" value="1" />
+			<Item label="Switch toogle" value="2" />
+			<Item label="Switch on" value="3" />
+		</Value>
+        <Value type="list" instance="1" index="10" genre="config" label="Existence of Endpoint3" size="1" min="1" max="2" value="1">
+			 <Help>
+                 Multi-Channel Command is a good way to control relay1 and relay2 of Switch individually.
+                 The endpoint3 of Micromodule is related to both relay1 and relay2.
+                 In some condition it becomes redundant in Multi-Channel Command Class.
+                 When the Existence of Endpoint3 is set as 2, the endpoint3 will be disabled.
+                 The default value is 1.
+                 Endpoint1 and Endpoint2 are fixed, only Endpoint3 is dynamic.
+             </Help>
+            <Item label="Endpoint 3 exist" value="1" />
+			<Item label="No Endpoint 3" value="2" />
+		</Value>
+	</CommandClass>
+	<!-- COMMAND_CLASS_ALARM does not respond to requests -->
+	<CommandClass id="113" action="remove" />
+	<!-- Association Groups -->
+	<CommandClass id="133">
+		<Associations num_groups="3">
+			<Group index="1" max_associations="1" label="Relay 1 and 2 together" />
+			<Group index="2" max_associations="1" label="Relay 1"/>
+			<Group index="3" max_associations="1" label="Relay 2"/>
+		</Associations>
+	</CommandClass>
+
+</Product>
