@@ -219,6 +219,7 @@ Version 1.5
  - Add Aeotec ZWA005 TriSensor (Nechry)
  - Add Devolo Smoke Detector MT02651 (Nechry)
  - Add Aeotec ZWA002 LED Bulb 6 Multi-Color (Nechry)
+ - Add Zipato PAN04 Micro Module Switch Double (Nechry)
 
 Version 1.4
  - Released 10th Jan, 2016
